[package]
name = "cosm-orc"
version = "2.3.1"
edition = "2021"
authors = ["Harry Hull <harry.hull1@gmail.com>"]

readme = "README.md"
description = "Cosmwasm smart contract orchestration and gas profiling library"
repository = "https://github.com/de-husk/cosm-orc.git"

keywords = ["cosmos", "cosmwasm", "smart-contract", "profiling"]
categories = ["cryptography::cryptocurrencies"]
license = "Apache-2.0"


[features]
optimize = ["cw-optimizoor"]

[dependencies]
thiserror = "1.0.31"
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
config = { version = "0.13.1", features = ["yaml"] }
cw-optimizoor = { version = "0.7.1", optional = true }
chain-registry = { version = "0.2.0-rc3", default-features=false }

cosmrs = { version = "0.9.0", features = ["rpc", "cosmwasm"] }
cosmos-sdk-proto = "0.14.0"
tendermint-rpc = { version = "0.23.9", features= ["http"], default-features=false }
tokio = { version = "1.20.1", features = ["time"] }
tonic = { version = "0.8.0", default-features=false }

[dev-dependencies]
assert_matches = "1.5"
cw20-base = "0.15"
cw20 = "0.15"
faux = "0.1.7"
